--- a/package.json
+++ b/package.json
@@ -24,11 +24,12 @@
     "lint": "eslint src --ext .ts,.tsx"
   },
   "dependencies": {
-    "@zignal/core": "*",
+    "@zignal/core": "^0.1.0",
     "react": ">=18.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
+    "@types/react": "^19.1.8",
     "@typescript-eslint/eslint-plugin": "^8.36.0",
     "@typescript-eslint/parser": "^8.36.0",
     "eslint": "^9.30.1",
@@ -37,7 +38,8 @@
     "typescript": "^5.0.0",
     "typescript-eslint": "^8.36.0",
     "vite": "^7.0.3",
-    "vite-plugin-dts": "^4.5.4"
+    "vite-plugin-dts": "^4.5.4",
+    "vitest": "^1.0.0"
   },
   "sideEffects": false
 }
