--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@zignal/sync",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "main": "dist/index.js",
+  "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "files": [
     "dist"
